Fix letter spacing on see all, zmist-268

--- a/src/components/VideoCategories/styles.scss
+++ b/src/components/VideoCategories/styles.scss
@@ -42,6 +42,7 @@
 
   &__watch-all {
     font-size: 13px;
+    letter-spacing: 0.05em;
 
     transition: color 0.3s ease-in-out;
 
